@@ -1,3 +1,5 @@
+27.dec (lv)
+      - feature request #8355: bww import: updated mscore regression testfiles
 24.dec (lv)
       - feature request #8355: bww import: mscore regression test
       - feature request #8355: bww import: bww2mxml regression test
